Some quick fixes for misaligned buttons

--- a/OurUmbraco.Client/src/scss/elements/_forum-thread.scss
+++ b/OurUmbraco.Client/src/scss/elements/_forum-thread.scss
@@ -521,6 +521,7 @@
 	text-align: center;
 	width: 100%;
 	margin: 0 auto;
+	padding-top: 10px;
 
 	.button {
 		display: inline-block;
