--- a/OurUmbraco.Client/src/scss/elements/_markdown-editor.scss
+++ b/OurUmbraco.Client/src/scss/elements/_markdown-editor.scss
@@ -380,6 +380,7 @@
 		  background: $color-green;
 		  color: white;
 		  padding: 10px;
+		  padding-left: 32px;
 		  width: 100%;
 		  max-width: 140px;
 		  font-family: $font-family;
