--- a/OurUmbraco.Client/src/scss/elements/_utilities.scss
+++ b/OurUmbraco.Client/src/scss/elements/_utilities.scss
@@ -50,6 +50,11 @@
 			@media (min-width: $md) {
 				margin-bottom: 0;
 			}
+			
+			span {
+				padding-top: 5px;
+				padding-left: 5px;
+			}
 		}
 	}
 
